font adjusted for mac pro

--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -128,9 +128,9 @@
       <div class="vertical-line-blank"> </div>
 
       <div class="body-right  body-txt">
-        <p class="t-title">LACMA</p>
+        <p class="t-title-l">LACMA</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Problem cloud study to urbanism building design
+        <p class="t-text-m">Problem cloud study to urbanism building design
         </p>
       </div>
     </div>
@@ -146,11 +146,11 @@
     <!--Problem cloud-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title"> PROBLEM CLOUD</P>
+        <P class="t-title-l"> PROBLEM CLOUD</P>
         <p class="horizontal-line"></p>
         <br>
 
-        <p class="t-text">Using the skills, tools and materials gathered to date including
+        <p class="t-text-m">Using the skills, tools and materials gathered to date including
           folding, laser cutting, assembling layers of plywood, manipulating images into vectors to
           construct a layered assemblage the problem cloud.
         </p>
@@ -166,11 +166,11 @@
     <!--Problem cloud-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title"> PROBLEM CLOUD</P>
+        <P class="t-title-l"> PROBLEM CLOUD</P>
         <p class="horizontal-line"></p>
         <br>
 
-        <p class="t-text">2 images in 3 color separations and one monochrome image. Take into
+        <p class="t-text-m">2 images in 3 color separations and one monochrome image. Take into
           account folding as studied in the box assignment, as well as offsetting to deal with
           corner and ground conditions.
         </p>
@@ -199,15 +199,15 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">PROBLEM CLOUD DIAGRAM
+        <P class="t-title-l">PROBLEM CLOUD DIAGRAM
         </P>
         <p class="horizontal-line"></p>
         <br>
-        <p class="t-text">2 images in 3 color separation and one monochrome image are
+        <p class="t-text-m">2 images in 3 color separation and one monochrome image are
           interleaved in a repetitive pattern. </P>
 
-        <p class="t-text"> 7 Layers total, Spacing: 1/4”</p>
-        <p class="t-text"> Monochrome image can be located anywhere within this layering. </p>
+        <p class="t-text-m"> 7 Layers total, Spacing: 1/4”</p>
+        <p class="t-text-m"> Monochrome image can be located anywhere within this layering. </p>
       </div>
     </div>
     <!--Cloud Diagram -->
@@ -218,11 +218,11 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">OPERATION METHOD
+        <P class="t-title-l">OPERATION METHOD
         </P>
         <p class="horizontal-line"></p>
         <br>
-        <p class="t-text">an armature continues around
+        <p class="t-text-m">an armature continues around
           the corner for structure, image
           layers are offset perpendicular
           from the innermost layer
@@ -238,11 +238,11 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">OPERATION METHOD
+        <P class="t-title-l">OPERATION METHOD
         </P>
         <p class="horizontal-line"></p>
         <br>
-        <p class="t-text">no corner armature, image
+        <p class="t-text-m">no corner armature, image
           layers are offset perpendicular
           with no distortion or shifting
         </p>
@@ -256,11 +256,11 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">OPERATION METHOD
+        <P class="t-title-l">OPERATION METHOD
         </P>
         <p class="horizontal-line"></p>
         <br>
-        <p class="t-text">no corner armature, image
+        <p class="t-text-m">no corner armature, image
           layers are offset perpendicular
           from the outermost layer
           with no distortion or shifting,
@@ -278,9 +278,9 @@
     <!--CaseStudy1 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title">FIRST ROUND TEST </p>
+        <p class="t-title-l">FIRST ROUND TEST </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">five sides of a box unfolded. As one
+        <p class="t-text-m">five sides of a box unfolded. As one
           layer of the image is folded to the box, formerly contiguous
           color areas are disconnected. An armature is necessary to
           hold the image layer together, and to align it with the other
@@ -310,9 +310,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">BOXES FROM PROBLEM CLOUD</P>
+        <P class="t-title-l">BOXES FROM PROBLEM CLOUD</P>
         <p class="horizontal-line"></p>
-        <p class="t-text"> Separate the boxes from the problem cloud </p>
+        <p class="t-text-m"> Separate the boxes from the problem cloud </p>
 
       </div>
     </div>
@@ -329,9 +329,9 @@
     <!--Site and City -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title"> OTHER MUSEUMS IN LA </p>
+        <p class="t-title-l"> OTHER MUSEUMS IN LA </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">searching for context and narrative with other museums
+        <p class="t-text-m">searching for context and narrative with other museums
 
         </p>
       </div>
@@ -346,9 +346,9 @@
     <!--Site and City2 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title"> EXTENSION OF ANGLE ORIENTATION </p>
+        <p class="t-title-l"> EXTENSION OF ANGLE ORIENTATION </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Extension of the orientation of the boxes on site
+        <p class="t-text-m">Extension of the orientation of the boxes on site
         </p>
       </div>
       <div class="vertical-line-blank">
@@ -362,9 +362,9 @@
     <!--Site and City3 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title">ANGLES IN BETWEEN VERTICALITY</p>
+        <p class="t-title-l">ANGLES IN BETWEEN VERTICALITY</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">the extension of the angles in between vertical box diagonal
+        <p class="t-text-m">the extension of the angles in between vertical box diagonal
         </p>
       </div>
       <div class="vertical-line-blank">
@@ -378,9 +378,9 @@
     <!--Site and City4 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title"> ANGLES IN BETWEEN HORIZONTALITY</p>
+        <p class="t-title-l"> ANGLES IN BETWEEN HORIZONTALITY</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">the extension of the angles in between horizontal box diagonal
+        <p class="t-text-m">the extension of the angles in between horizontal box diagonal
         </p>
       </div>
       <div class="vertical-line-blank">
@@ -408,9 +408,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">SITE PLAN </P>
+        <P class="t-title-l">SITE PLAN </P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Large-Scale</p>
+        <p class="t-text-m">Large-Scale</p>
       </div>
     </div>
     <!--site Plan-->
@@ -419,9 +419,9 @@
     <!--Plan1-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLAN </p>
+        <p class="t-title-l">FLOOR PLAN </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Ground Floor</p>
+        <p class="t-text-m">Ground Floor</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -439,9 +439,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">FLOOR PLAN </P>
+        <P class="t-title-l">FLOOR PLAN </P>
         <p class="horizontal-line"></p>
-        <p class="t-text">2F</p>
+        <p class="t-text-m">2F</p>
       </div>
     </div>
     <!--Plan2-->
@@ -450,9 +450,9 @@
     <!--Plan3-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLAN </p>
+        <p class="t-title-l">FLOOR PLAN </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">3F</p>
+        <p class="t-text-m">3F</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -470,9 +470,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">FLOOR PLAN </P>
+        <P class="t-title-l">FLOOR PLAN </P>
         <p class="horizontal-line"></p>
-        <p class="t-text">4F</p>
+        <p class="t-text-m">4F</p>
       </div>
     </div>
     <!--Plan4-->
@@ -493,9 +493,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">ELEVATION </P>
+        <P class="t-title-l">ELEVATION </P>
         <p class="horizontal-line"></p>
-        <p class="t-text"> Section A' - A'</p>
+        <p class="t-text-m"> Section A' - A'</p>
       </div>
     </div>
     <!--Elevations-->
@@ -504,9 +504,9 @@
     <!--Elevation1-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">ELEVATION </p>
+        <p class="t-title-l">ELEVATION </p>
         <p class="horizontal-line"></p>
-        <p class="t-text"> Section B' - B'</p>
+        <p class="t-text-m"> Section B' - B'</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
