--- a/architecture/index.html
+++ b/architecture/index.html
@@ -176,13 +176,13 @@
             RECREATION COMMONS </a>
           </p>
           <p class="horizontal-line"></p>
-          <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
-          <p class="t-text">M. Arch, CED, UC Berkeley</p>
-          <p class="t-text">Instructor: Roddy Creedon</p>
-          <p class="t-text">Duration: One Semester</p>
+          <p class="t-text-m">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
+          <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
+          <p class="t-text-m">Instructor: Roddy Creedon</p>
+          <p class="t-text-m">Duration: One Semester</p>
 
-          <p class="t-text">Site: 110 Franklin St. San Francisco, CA, 94102</p>
-          <p class="t-text">Total Floor Area: 22900 s.f. 4 Floors</p>
+          <p class="t-text-m">Site: 110 Franklin St. San Francisco, CA, 94102</p>
+          <p class="t-text-m">Total Floor Area: 22900 s.f. 4 Floors</p>
         </div>
       </div>
     </div>
@@ -196,11 +196,11 @@
         <div class="body-left body-txt">
           <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
           <p class="horizontal-line"></p>
-          <p class="t-text">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
-          <p class="t-text">Duration: Six Weeks </p>
-          <p class="t-text">Site: Location: Hyde Park, London </p>
-          <p class="t-text">7500 square metres approx. </p>
-          <p class="t-text">Maximum Built Area: 4000 square metres </p>
+          <p class="t-text-m">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
+          <p class="t-text-m">Duration: Six Weeks </p>
+          <p class="t-text-m">Site: Location: Hyde Park, London </p>
+          <p class="t-text-m">7500 square metres approx. </p>
+          <p class="t-text-m">Maximum Built Area: 4000 square metres </p>
         </div>
 
         <div class="vertical-line-blank">
@@ -226,10 +226,10 @@
             OBJECTS
           </a>
           <p class="horizontal-line"></p>
-          <p class="t-text">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
-          <p class="t-text">M. Arch, CED, UC Berkeley</p>
-          <p class="t-text">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
-          <p class="t-text">Duration: Two Semesters</p>
+          <p class="t-text-m">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
+          <p class="t-text-m">M. Arch, CED, UC Berkeley</p>
+          <p class="t-text-m">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
+          <p class="t-text-m">Duration: Two Semesters</p>
         </div>
       </div>
     </div>
@@ -240,11 +240,11 @@
         <div class="body-left body-txt">
           <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
           <p class="horizontal-line"></p>
-          <p class="t-text">[IN]ARCH ADV, SUMMERS 2014 </p>
-          <p class="t-text">Summer Program, CED, UC Berkeley </p>
-          <p class="t-text">Instructor: Keith Plymale </p>
-          <p class="t-text">Duration: One Semester</p>
-          <p class="t-text">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+          <p class="t-text-m">[IN]ARCH ADV, SUMMERS 2014 </p>
+          <p class="t-text-m">Summer Program, CED, UC Berkeley </p>
+          <p class="t-text-m">Instructor: Keith Plymale </p>
+          <p class="t-text-m">Duration: One Semester</p>
+          <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102 </p>
         </div>
         <div class="vertical-line-blank">
         </div>
@@ -266,11 +266,11 @@
         <div class="body-right body-txt">
           <a class="t-title-l" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF RIVER EDGES </a>
           <p class="horizontal-line"></p>
-          <p class="t-text">Introduction to Architecture Studio 2, Spring 2016 </p>
-          <p class="t-text">M. Arch, CED, UC Berkeley </p>
-          <p class="t-text">Instructor: Jay Atherton </p>
-          <p class="t-text">Duration: One Semester</p>
-          <p class="t-text">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+          <p class="t-text-m">Introduction to Architecture Studio 2, Spring 2016 </p>
+          <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
+          <p class="t-text-m">Instructor: Jay Atherton </p>
+          <p class="t-text-m">Duration: One Semester</p>
+          <p class="t-text-m">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
           </p>
         </div>
       </div>
@@ -283,10 +283,10 @@
         <div class="body-left body-txt">
           <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
           <p class="horizontal-line"></p>
-          <p class="t-text">Introduction to Architecture Studio 1, Fall 2015 </p>
-          <p class="t-text">M. Arch, CED, UC Berkeley </p>
-          <p class="t-text">Instructor: Rudabeh Pakravan </p>
-          <p class="t-text">Duration: One Semester</p>
+          <p class="t-text-m">Introduction to Architecture Studio 1, Fall 2015 </p>
+          <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
+          <p class="t-text-m">Instructor: Rudabeh Pakravan </p>
+          <p class="t-text-m">Duration: One Semester</p>
         </div>
         <div class="vertical-line-blank">
         </div>
@@ -308,9 +308,9 @@
         <div class="body-right body-txt">
           <a class="t-title-l" data-aos="fade-up" href="./LACAMA/">LACMA</a>
           <p class="horizontal-line"></p>
-          <p class="t-text">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
-          <p class="t-text">Instructor: Mark Anderson</p>
-          <p class="t-text">Duration: One Semester</p>
+          <p class="t-text-m">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
+          <p class="t-text-m">Instructor: Mark Anderson</p>
+          <p class="t-text-m">Duration: One Semester</p>
         </div>
       </div>
     </div>
@@ -325,10 +325,10 @@
         <div class="body-left body-txt">
           <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
           <p class="horizontal-line"></p>
-          <p class="t-text">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-          <p class="t-text">M. Arch, CED, UC Berkeley </p>
-          <p class="t-text">Instructor: Yung Ho Chang </p>
-          <p class="t-text">Duration: One Semester, One Unit</p>
+          <p class="t-text-m">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+          <p class="t-text-m">M. Arch, CED, UC Berkeley </p>
+          <p class="t-text-m">Instructor: Yung Ho Chang </p>
+          <p class="t-text-m">Duration: One Semester, One Unit</p>
         </div>
         <div class="vertical-line-blank">
         </div>
