--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -128,9 +128,9 @@
       <div class="vertical-line-blank"> </div>
 
       <div class="body-right  body-txt">
-        <p class="t-title">MANIFOLD GROUND</p>
+        <p class="t-title-l">MANIFOLD GROUND</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Form finding from 2 dimensions to 3 dimensions</p>
+        <p class="t-text-m">Form finding from 2 dimensions to 3 dimensions</p>
       </div>
 
 
@@ -146,9 +146,9 @@
     <!--diagram-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title"> 2D TO 3D</P>
+        <P class="t-title-l"> 2D TO 3D</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
+        <p class="t-text-m">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-left body-img float">
@@ -164,9 +164,9 @@
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-right body-txt">
-        <P class="t-title">GEOMETRY ON SITE</P>
+        <P class="t-title-l">GEOMETRY ON SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Transfer the geometry to site </p>
+        <p class="t-text-m">Transfer the geometry to site </p>
       </div>
     </div>
     <!--geometry-->
@@ -175,9 +175,9 @@
     <!--density-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title">2D TO 3D MANIPULATION</p>
+        <p class="t-title-l">2D TO 3D MANIPULATION</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Cut and fold on both side of the bristol paper</p>
+        <p class="t-text-m">Cut and fold on both side of the bristol paper</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -197,9 +197,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">DIAGRAMS</p>
+        <p class="t-title-l">DIAGRAMS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Programs including market, observation place, beer garden, etc. </p>
+        <p class="t-text-m">Programs including market, observation place, beer garden, etc. </p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -225,9 +225,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">FLYOVER VIEW</P>
+        <P class="t-title-l">FLYOVER VIEW</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">From the surrounding building people can see this build as an urban
+        <p class="t-text-m">From the surrounding building people can see this build as an urban
           sculpture</p>
       </div>
     </div>
@@ -243,9 +243,9 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">SITE</p>
+        <p class="t-title-l">SITE</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">This site is one of the most popular places in san Francisco. Along
+        <p class="t-text-m">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
@@ -266,9 +266,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">SITE</P>
+        <P class="t-title-l">SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Site: 450 Hayes St. San Francisco, CA 94102</p>
+        <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102</p>
 
       </div>
     </div>
