--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -128,9 +128,9 @@
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-right body-txt">
-        <P class="t-title">NARROW STRIPES</P>
+        <P class="t-title-l">NARROW STRIPES</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Using a series of straps to divide the space that providing an
+        <p class="t-text-m">Using a series of straps to divide the space that providing an
           infrastructure space serves the community nearby</p>
       </div>
 
@@ -150,9 +150,9 @@
     <!--diagram 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">PROGRAMS</p>
+        <p class="t-title-l">PROGRAMS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Three categories of programs. Social and Leisure, Library, and
+        <p class="t-text-m">Three categories of programs. Social and Leisure, Library, and
           miscellaneous</p>
       </div>
       <div class="body-left body-img float">
@@ -179,9 +179,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title">RENDERS</P>
+        <P class="t-title-l">RENDERS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Multiple views</p>
+        <p class="t-text-m">Multiple views</p>
       </div>
     </div>
     <!--Section Perspective -->
@@ -195,9 +195,9 @@
     <!--Plan-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">SITE PLAN</p>
+        <p class="t-title-l">SITE PLAN</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Relationship between site and the infrastructure building</p>
+        <p class="t-text-m">Relationship between site and the infrastructure building</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -215,9 +215,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title"> SITE</p>
+        <p class="t-title-l"> SITE</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Location: Hyde Park, London</p>
+        <p class="t-text-m">Location: Hyde Park, London</p>
       </div>
 
     </div>
