--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -128,9 +128,9 @@
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-right body-txt">
-        <P class="t-title">RECOVERY OF RIVER EDGES</P>
+        <P class="t-title-l">RECOVERY OF RIVER EDGES</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+        <p class="t-text-m">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
         </p>
       </div>
 
@@ -145,9 +145,9 @@
     <!--density-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title"> DENSITY OF DIVISIONS</p>
+        <p class="t-title-l"> DENSITY OF DIVISIONS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Research to project</p>
+        <p class="t-text-m">Research to project</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -172,9 +172,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">SITE ANALYSIS</p>
+        <p class="t-title-l">SITE ANALYSIS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">The site is located in the LA River near the Sunnynook River Park.</p>
+        <p class="t-text-m">The site is located in the LA River near the Sunnynook River Park.</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -187,9 +187,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">SITE RESEARCH METHOD</p>
+        <p class="t-title-l">SITE RESEARCH METHOD</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Photos below were taken from the linear path. Each photo took in
+        <p class="t-text-m">Photos below were taken from the linear path. Each photo took in
           between every single six feet along the path. </p>
       </div>
       <div class="vertical-line-blank"> </div>
@@ -216,9 +216,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">Photos of Sequences and Movements</P>
+        <P class="t-title-l">Photos of Sequences and Movements</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">the sequences of photos show the relationship between subjects(the
+        <p class="t-text-m">the sequences of photos show the relationship between subjects(the
           place where took photos) and objects(main object on site).</p>
       </div>
     </div>
@@ -233,9 +233,9 @@
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">RESEARCH TO SITE</p>
+        <p class="t-title-l">RESEARCH TO SITE</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Transform the research final result to site</p>
+        <p class="t-text-m">Transform the research final result to site</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -248,9 +248,9 @@
     <!--research-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FINAL VIEWS</p>
+        <p class="t-title-l">FINAL VIEWS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">On-site view before vs. after</p>
+        <p class="t-text-m">On-site view before vs. after</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -275,9 +275,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title">PROGRAMS</P>
+        <P class="t-title-l">PROGRAMS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Cafe, restaurant, kayak</p>
+        <p class="t-text-m">Cafe, restaurant, kayak</p>
       </div>
     </div>
     <!--programs-->
@@ -286,9 +286,9 @@
     <!--programs-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">DIAGRAMS</p>
+        <p class="t-title-l">DIAGRAMS</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Relationship between site and the surrounding</p>
+        <p class="t-text-m">Relationship between site and the surrounding</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -306,9 +306,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title">FLOOR PLAN</P>
+        <P class="t-title-l">FLOOR PLAN</P>
         <p class="horizontal-line"></p>
-        <p class="t-text">Horizontal division create the space with dynamic view</p>
+        <p class="t-text-m">Horizontal division create the space with dynamic view</p>
       </div>
     </div>
     <!--plan -->
@@ -317,9 +317,9 @@
     <!--render-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">Collages</p>
+        <p class="t-title-l">Collages</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">Experiencing the space with human perspective</p>
+        <p class="t-text-m">Experiencing the space with human perspective</p>
       </div>
       <div class="vertical-line-blank">
       </div>
