--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -128,9 +128,9 @@
       </div>
 
       <div class="body-right body-txt">
-        <P class="t-title">TWO VOLUMES IN ONE SPACE</P>
+        <P class="t-title-l">TWO VOLUMES IN ONE SPACE</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">the purpose of these two volumes is to distinguish two types of
+        <p class="t-text-m">the purpose of these two volumes is to distinguish two types of
           programs: for the public, another for private use.</p>
       </div>
 
@@ -153,9 +153,9 @@
       </div>
 
       <div class="body-right body-txt">
-        <p class="t-title">PRIVATE VS. PUBLIC</p>
+        <p class="t-title-l">PRIVATE VS. PUBLIC</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">insert two volumes into one space two distinguish two main programs.
+        <p class="t-text-m">insert two volumes into one space two distinguish two main programs.
           one for the public, another one for private purpose</p>
       </div>
 
@@ -165,9 +165,9 @@
     <!--diagram 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">EXERCISE VS. LEISURE</p>
+        <p class="t-title-l">EXERCISE VS. LEISURE</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">the circulation integrates the two volumes as one space. it creates a
+        <p class="t-text-m">the circulation integrates the two volumes as one space. it creates a
           dynamic view between the leisure and training sections.</p>
       </div>
       <div class="body-left body-img float">
@@ -186,9 +186,9 @@
     <!--environmental diagram-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">THE MANIPULATION OF TWO VOLUMES</p>
+        <p class="t-title-l">THE MANIPULATION OF TWO VOLUMES</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Void vs. Solid</p>
+        <p class="t-text-m">Void vs. Solid</p>
       </div>
       <div class="body-left body-img float">
         <img src="diagram1.jpg" alt="DIAGRAM" class="image">
@@ -198,13 +198,13 @@
     <!--environmental diagram-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">LIGHT AND AIR</p>
+        <p class="t-title-l">LIGHT AND AIR</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-subtitle">an opening on the southern side provides and a gap between adjacent
+        <p class="t-text-m">an opening on the southern side provides and a gap between adjacent
           build providing all-day nature daylight from the top all the way to the swimming pool at
           first floor</p>
-        <p class="t-subtitle">Spring 2021</p>
+        <p class="t-text-m">Spring 2021</p>
       </div>
       <div class="body-left body-img float">
         <img src="diagram2.jpg" alt="DIAGRAM" class="image">
@@ -214,10 +214,10 @@
     <!--environmental diagram-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FACADE DESGIN</p>
+        <p class="t-title-l">FACADE DESGIN</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-subtitle">all the windows equally set, and the metal mesh with two types of
+        <p class="t-text-m">all the windows equally set, and the metal mesh with two types of
           coating redomly setup</p>
       </div>
       <div class="body-left body-img float">
@@ -235,9 +235,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title">SECTION PERSPECTIVE</P>
+        <P class="t-title-l">SECTION PERSPECTIVE</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F1-5 with Facade Detail</p>
+        <p class="t-text-m">F1-5 with Facade Detail</p>
       </div>
     </div>
     <!--Section Perspective -->
@@ -251,10 +251,10 @@
     <!--renders 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">INTERIOR VIEW</p>
+        <p class="t-title-l">INTERIOR VIEW</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-subtitle">Interior view from the public side</p>
+        <p class="t-text-m">Interior view from the public side</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -272,9 +272,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title">INTERIOR VIEW</p>
+        <p class="t-title-l">INTERIOR VIEW</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Interior view from the activity room</p>
+        <p class="t-text-m">Interior view from the activity room</p>
       </div>
 
     </div>
@@ -284,10 +284,10 @@
     <!--renders 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">STREET VIEW</p>
+        <p class="t-title-l">STREET VIEW</p>
         <p class="horizontal-line"></p>
 
-        <p class="t-subtitle">Street view from south west</p>
+        <p class="t-text-m">Street view from south west</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -308,9 +308,9 @@
     <!--plans and sections 1-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLANS </p>
+        <p class="t-title-l">FLOOR PLANS </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F3 and F4</p>
+        <p class="t-text-m">F3 and F4</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -323,9 +323,9 @@
     <!--plans and sections 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLANS </p>
+        <p class="t-title-l">FLOOR PLANS </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F1 and F2</p>
+        <p class="t-text-m">F1 and F2</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -338,9 +338,9 @@
     <!--plans and sections 3-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLANS </p>
+        <p class="t-title-l">FLOOR PLANS </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F3 and F4</p>
+        <p class="t-text-m">F3 and F4</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -359,9 +359,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title"> SECTIONS</P>
+        <P class="t-title-l"> SECTIONS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F5 and Facade Detail</p>
+        <p class="t-text-m">F5 and Facade Detail</p>
       </div>
     </div>
     <!--plans and sections 2-->
@@ -375,9 +375,9 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <P class="t-title">SECTIONS</P>
+        <P class="t-title-l">SECTIONS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F5 and Facade Detail</p>
+        <p class="t-text-m">F5 and Facade Detail</p>
       </div>
     </div>
     <!--plans and sections 3-->
@@ -390,9 +390,9 @@
     <!--site-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">SITE </p>
+        <p class="t-title-l">SITE </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">110 Franklin St. San Francisco, CA, 94102</p>
+        <p class="t-text-m">110 Franklin St. San Francisco, CA, 94102</p>
       </div>
       <div class="vertical-line-blank">
       </div>
