--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -128,9 +128,9 @@
       <div class="vertical-line-blank"> </div>
 
       <div class="body-right  body-txt">
-        <p class="t-title">THE ROTATION OF CURVES </p>
+        <p class="t-title-l">THE ROTATION OF CURVES </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Foam finding and geometry manipulation</p>
+        <p class="t-text-m">Foam finding and geometry manipulation</p>
       </div>
 
 
@@ -147,9 +147,9 @@
     <!--geometry-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title"> A 20 FEET DIAMETER SITE</P>
+        <P class="t-title-l"> A 20 FEET DIAMETER SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Adding geometries based on requirement </p>
+        <p class="t-text-m">Adding geometries based on requirement </p>
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-left body-img float">
@@ -161,11 +161,11 @@
     <!--geometry-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
+        <P class="t-title-l"> ADDING OR BOOLEAN GEOMETRY ON SITE</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">1st week, 6 volumes</p>
-          <p class="t-subtitle">2nd week, 8 geometries</p>
-        <p class="t-subtitle"> 3rd week, 20 volumes</p>
+        <p class="t-text-m">1st week, 6 volumes</p>
+          <p class="t-text-m">2nd week, 8 geometries</p>
+        <p class="t-text-m"> 3rd week, 20 volumes</p>
       </div>
       <div class="vertical-line-blank"></div>
       <div class="body-left body-img float">
@@ -184,9 +184,9 @@
     <!--density-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title">TWO CUTS ONE FOAM</p>
+        <p class="t-title-l">TWO CUTS ONE FOAM</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Cut and fold the foam</p>
+        <p class="t-text-m">Cut and fold the foam</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -201,9 +201,9 @@
     <!--site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">PHOTOS OF THE FOAM</p>
+        <p class="t-title-l">PHOTOS OF THE FOAM</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Elevation view</p>
+        <p class="t-text-m">Elevation view</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -224,9 +224,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">DRAWING        </P>
+        <P class="t-title-l">DRAWING        </P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">From the surrounding building people can see this build as an urban
+        <p class="t-text-m">From the surrounding building people can see this build as an urban
           sculpture</p>
       </div>
     </div>
@@ -237,9 +237,9 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title"> DRAWING    </p>
+        <p class="t-title-l"> DRAWING    </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">This site is one of the most popular places in san Francisco. Along
+        <p class="t-text-m">This site is one of the most popular places in san Francisco. Along
           the city axis, there are Saint Mary's Cathedral, SF City Hall, and there is a freeway
           entrance on the southern side.
         </p>
@@ -264,9 +264,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">PART I + PART II = PART III</P>
+        <P class="t-title-l">PART I + PART II = PART III</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Combine the island and the foam</p>
+        <p class="t-text-m">Combine the island and the foam</p>
 
       </div>
     </div>
@@ -274,10 +274,10 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLANS </p>
+        <p class="t-title-l">FLOOR PLANS </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">A conceptual 4-story single-family house  </p>
-        <p class="t-subtitle"> the form-finding concept of rotation curves shows in these plans </p>
+        <p class="t-text-m">A conceptual 4-story single-family house  </p>
+        <p class="t-text-m"> the form-finding concept of rotation curves shows in these plans </p>
 
       </div>
       <div class="vertical-line-blank">
@@ -295,9 +295,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">ELEVATIONS</P>
+        <P class="t-title-l">ELEVATIONS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Concrete facade with openings</p>
+        <p class="t-text-m">Concrete facade with openings</p>
 
       </div>
     </div>
@@ -305,9 +305,9 @@
     <!--Site -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">SECTIONS</p>
+        <p class="t-title-l">SECTIONS</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">
+        <p class="t-text-m">
           the form-finding concept of rotation curves shows in these sections
         </p>
       </div>
@@ -326,9 +326,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">RENDERS</P>
+        <P class="t-title-l">RENDERS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Two views from the inside of the house</p>
+        <p class="t-text-m">Two views from the inside of the house</p>
 
       </div>
     </div>
