--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -196,19 +196,19 @@
           </g>
         </svg>
         <br>
-        <p class="t-subtitle">"The order is not rationalistic and underlying but is simply order,
+        <p class="t-text-l">"The order is not rationalistic and underlying but is simply order,
           like that of continuity, one thing after another. "</p>
-        <p class="t-subtitle">— Donald Judd </p>
+        <p class="t-text-m">— Donald Judd </p>
 
       </div>
       <div class="vertical-line-blank"> </div>
 
       <div class="body-right  body-txt">
-        <p class="t-title">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
+        <p class="t-title-l">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
 
         </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Thesis Studio</p>
+        <p class="t-text-m">Thesis Studio</p>
       </div>
 
 
@@ -225,11 +225,11 @@
     <!--Abstract-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <P class="t-title"> ABSTRACT</P>
+        <P class="t-title-l"> ABSTRACT</P>
         <p class="horizontal-line"></p>
         <br>
 
-        <p class="t-subtitle">Architecture is nothing more but a union of disparate systems, and
+        <p class="t-text-s">Architecture is nothing more but a union of disparate systems, and
           every aspect of an architectural design is part of one system or another. The individual
           systems can be continuous or discontinuous, and they are all related in some way. As an
           architect, it’s important that one does not only consider continuity as it pertains to a
@@ -239,7 +239,7 @@
           effect on other systems.
         </p>
         <br>
-        <p class="t-subtitle">In a building, each type of architectural elements creates a kind of
+        <p class="t-text-s">In a building, each type of architectural elements creates a kind of
           spatial continuity or discontinuity based on the way it’s arranged. For example, if we
           have a row of ten columns, each 10 ft apart, we can say that they are continuous because
           they form a sequence. If we have ten columns with different shape or orientation, we can
@@ -250,7 +250,7 @@
         </p>
         <br>
 
-        <p class="t-subtitle">The degree of continuity and discontinuity can be adjusted to achieve
+        <p class="t-text-s">The degree of continuity and discontinuity can be adjusted to achieve
           the needs of a particular program. For example, when designing a 600 meter tall landmark
           skyscraper, one must consider the building’s use for both shopping and as an office. Many
           archi- tects who design these types of buildings will use focal points such as the arrival
@@ -285,12 +285,12 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">OPERATION METHOD
+        <P class="t-title-l">OPERATION METHOD
         </P>
         <p class="horizontal-line"></p>
         <br>
 
-        <p class="t-subtitle">Architects use objects to connect and divide space. The arrangement of
+        <p class="t-text-s">Architects use objects to connect and divide space. The arrangement of
           objects appreciates aesthetic appeal and spatial quality. The goal of this thesis is to
           showcase a series of experiments in the arrangement of architectural elements, and explore
           the relationships between architectural components and the integration of various types of
@@ -301,7 +301,7 @@
           similarity. The similarity includes size and shape, spacing and orientation.
         </p>
         <br>
-        <p class="t-subtitle">For instance, if we have a row of ten columns with similar size,
+        <p class="t-text-s">For instance, if we have a row of ten columns with similar size,
           shape, spacing, or orientation, we call it continuity. If we have different size, or
           different shape, or different orientation, we can say that is discontinuity because they
           do not maintain the sequence.
@@ -321,9 +321,9 @@
     <!--CaseStudy1 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title">CASE STUDY 1</p>
+        <p class="t-title-l">CASE STUDY 1</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Here are some historical buildings that have utilized continuity and
+        <p class="t-text-m">Here are some historical buildings that have utilized continuity and
           discontinuity to create distinctive features. </p>
       </div>
       <div class="vertical-line-blank">
@@ -339,9 +339,9 @@
     <!--CaseStudy2 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title">CASE STUDY 2</p>
+        <p class="t-title-l">CASE STUDY 2</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">These case studies interpret the relationship between the
+        <p class="t-text-m">These case studies interpret the relationship between the
           architectural elements and aesthetic appeal. </p>
       </div>
       <div class="vertical-line-blank">
@@ -355,9 +355,9 @@
     <!--CaseStudy3 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title">CASE STUDY 3 </p>
+        <p class="t-title-l">CASE STUDY 3 </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">The following experiments will explore the effect of changes in the
+        <p class="t-text-m">The following experiments will explore the effect of changes in the
           degree of continuity and discontinuity in these iconic buildings.</p>
       </div>
       <div class="vertical-line-blank">
@@ -371,9 +371,9 @@
     <!--CaseStudy4 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title">CASE STUDY 4</p>
+        <p class="t-title-l">CASE STUDY 4</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">
+        <p class="t-text-m">
 
         </p>
       </div>
@@ -400,9 +400,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">RESULTS OF MANIPULATIONS</P>
+        <P class="t-title-l">RESULTS OF MANIPULATIONS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">the comparison of the results of case study manipulations </p>
+        <p class="t-text-m">the comparison of the results of case study manipulations </p>
 
       </div>
     </div>
@@ -419,11 +419,11 @@
     <!--project -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title"> My Understanding of Architecture </p>
+        <p class="t-title-l"> My Understanding of Architecture </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Architecture is nothing more but a union of disparate systems. Every
+        <p class="t-text-m">Architecture is nothing more but a union of disparate systems. Every
           aspect of an architectural design is part of one system or another. </p>
-        <p class="t-subtitle">
+        <p class="t-text-m">
           For example, in an office building, the columns form a sequence, the furniture establish
           the sequence, the repetition of the program as well as the repetition of the elements
         </p>
@@ -442,17 +442,17 @@
     <!--project1 -->
     <div class="body-h">
       <div class="body-left  body-txt">
-        <p class="t-title"> My Understanding of Architecture </p>
+        <p class="t-title-l"> My Understanding of Architecture </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle"> Different types of sequences can be extended into larger systems.
+        <p class="t-text-m"> Different types of sequences can be extended into larger systems.
           Through aggregation, combination, and in relation to other arrangements, they form larger
           spatial networks and complex material systems. </p>
-        <p class="t-subtitle">
+        <p class="t-text-m">
           The individual systems can be continuous or discontinuous, and they are all related in
           some way. As an architect, it's important that one does not only consider continuity as it
           pertains to a single system, but also the effects that continuous/discontinuous aspects of
           different systems can have on each other. </p>
-        <p class="t-subtitle">
+        <p class="t-text-m">
           The use of discontinuity in a single system can be used to create distinctive features in
           an architectural design if the architect considers its effect on other systems.
 
@@ -484,9 +484,9 @@
       <div class="vertical-line-blank"></div>
 
       <div class="body-right body-txt">
-        <P class="t-title"> DIFFERENTIATED CONTINUITY </P>
+        <P class="t-title-l"> DIFFERENTIATED CONTINUITY </P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Differentiated continuity apply on different scales</p>
+        <p class="t-text-m">Differentiated continuity apply on different scales</p>
 
       </div>
     </div>
@@ -500,9 +500,9 @@
     <!--Scale-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title">DRAWING</p>
+        <p class="t-title-l">DRAWING</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Large-Scale</p>
+        <p class="t-text-m">Large-Scale</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -514,9 +514,9 @@
     <!--Scale-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">DRAWING </p>
+        <p class="t-title-l">DRAWING </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Mid-Scale</p>
+        <p class="t-text-m">Mid-Scale</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -535,9 +535,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">DRAWING </P>
+        <P class="t-title-l">DRAWING </P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Large-Scale</p>
+        <p class="t-text-m">Large-Scale</p>
       </div>
     </div>
     <!--Scale-->
@@ -548,9 +548,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">DRAWING </P>
+        <P class="t-title-l">DRAWING </P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Mid-Scale</p>
+        <p class="t-text-m">Mid-Scale</p>
       </div>
     </div>
     <!--Scale-->
@@ -559,9 +559,9 @@
     <!--Scale-->
     <div class="body-h">
       <div class="body-right body-txt">
-        <p class="t-title">DRAWING</p>
+        <p class="t-title-l">DRAWING</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Mid-Scale</p>
+        <p class="t-text-m">Mid-Scale</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -573,9 +573,9 @@
     <!--Scale-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">DRAWING </p>
+        <p class="t-title-l">DRAWING </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Small-Scale</p>
+        <p class="t-text-m">Small-Scale</p>
       </div>
       <div class="vertical-line-blank"> </div>
 
@@ -599,9 +599,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">PHOTOS</P>
+        <P class="t-title-l">PHOTOS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle"> Circulation</p>
+        <p class="t-text-m"> Circulation</p>
 
       </div>
     </div>
@@ -613,9 +613,9 @@
     <!--photos -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">PHOTOS </p>
+        <p class="t-title-l">PHOTOS </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Structure </p>
+        <p class="t-text-m">Structure </p>
 
       </div>
       <div class="vertical-line-blank">
@@ -635,9 +635,9 @@
       </div>
       <div class="vertical-line-blank"> </div>
       <div class="body-right body-txt">
-        <P class="t-title">PHOTOS</P>
+        <P class="t-title-l">PHOTOS</P>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Surface</p>
+        <p class="t-text-m">Surface</p>
 
       </div>
     </div>
@@ -648,9 +648,9 @@
     <!--photos -->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">PHOTOS</p>
+        <p class="t-title-l">PHOTOS</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">
+        <p class="t-text-m">
           Perspective </p>
       </div>
       <div class="vertical-line-blank">
