--- a/photography/index.html
+++ b/photography/index.html
@@ -167,8 +167,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-right body-txt">
           <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
           <p class="horizontal-line"></p>
-          <p class="t-text">December, 2019</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">December, 2019</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
       </div>
     </div>
@@ -183,8 +183,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-left body-txt">
           <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
           <p class="horizontal-line"></p>
-          <p class="t-text">December, 2019</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">December, 2019</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
 
         <div class="vertical-line-blank">
@@ -210,8 +210,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-right body-txt">
           <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
           <p class="horizontal-line"></p>
-          <p class="t-text">December, 2019</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">December, 2019</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
       </div>
 
@@ -227,8 +227,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-left body-txt">
           <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
           <p class="horizontal-line"></p>
-          <p class="t-text">December, 2019</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">December, 2019</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
 
         <div class="vertical-line-blank">
@@ -255,8 +255,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-right body-txt">
           <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
           <p class="horizontal-line"></p>
-          <p class="t-text">December, 2019</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">December, 2019</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
       </div>
 
@@ -271,8 +271,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-left body-txt">
           <p class="t-title-l">Sacramento National Wildlife Refuge</p>
           <p class="horizontal-line"></p>
-          <p class="t-text">December, 2019</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">December, 2019</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
 
         <div class="vertical-line-blank">
@@ -298,8 +298,8 @@ Interested in what you see? Shoot me an email :) " />
         <div class="body-right body-txt">
           <p class="t-title-l">Teton National Park </p>
           <p class="horizontal-line"></p>
-          <p class="t-text">September, 2020</p>
-          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+          <p class="t-text-m">September, 2020</p>
+          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
         </div>
       </div>
     </div>
@@ -316,8 +316,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-left body-txt">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
@@ -347,8 +347,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-right body-txt">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -363,8 +363,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-left body-txt">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
@@ -391,8 +391,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-right body-txt">
         <p class="t-title-l">White Sands National Monument </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -405,8 +405,8 @@ Interested in what you see? Shoot me an email :) " />
     <div class="body-left body-txt">
       <p class="t-title-l">White Sands National Monument</p>
       <p class="horizontal-line"></p>
-      <p class="t-text">December, 2019</p>
-      <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      <p class="t-text-m">December, 2019</p>
+      <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
     </div>
 
     <div class="vertical-line-blank">
@@ -436,8 +436,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-right body-txt">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -452,8 +452,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-left body-txt">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
       </div>
 
@@ -482,8 +482,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-right body-txt">
         <p class="t-title-l">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">September, 2020 </p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">September, 2020 </p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -498,8 +498,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-left body-txt">
         <p class="t-title-l">Taos Pueblo Indian Reservation</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
@@ -528,8 +528,8 @@ Interested in what you see? Shoot me an email :) " />
       <div class="body-right body-txt">
         <p class="t-title-l">Donner Lake </p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019 </p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019 </p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
   </div>
@@ -542,10 +542,10 @@ Interested in what you see? Shoot me an email :) " />
     <div class="body-h">
 
       <div class="body-left body-txt">
-        <p class="t-title-l">Taos Pueblo Indian Reservation</p>
+        <p class="t-title-l">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
-        <p class="t-text">December, 2019</p>
-        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
