--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -119,7 +119,7 @@
   <!--about gardenershub-->
   <div class="body-h-project bg-color-gh" id="bg-color-trigger">
     <div class="body-left body-img float">
-      <img src="gardeners_hub.png" alt="Gardenrs' Hub">
+      <img src="../layout_gardenershub.png" alt="Gardenrs' Hub">
     </div>
     <div class="vertical-line-blank"></div>
     <div class="body-right body-txt">
@@ -222,9 +222,7 @@
     <div class="body-left body-txt">
       <p class="t-title-l">Sell and Share</p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">A community marketplace marketplace
-
-      </p>
+      <p class="t-text-m">A community marketplace </p>
     </div>
     <div class="body-right body-img float">
       <img src="solution_sell.png" alt="DIAGRAM" class="image">
@@ -241,10 +239,10 @@
     <div class="body-right body-txt">
       <P class="t-title-l">Local Social Network</P>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">Buy and sell locally (Plants, plant seeds, tools, plant decoration
-        ideas)
+      <p class="t-text-m">Buy and sell locally </p>
+      <p class="t-text-m">Sharing Experiences with neighbors </p>
+      <p class="t-text-m">Sharing Gardening Tools </p>
 
-      </p>
     </div>
   </div>
   <!--img 2-->
@@ -253,24 +251,28 @@
     <div class="body-left  body-txt">
       <p class="t-title-l">Plant Profile</p>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">xxx</p>
+      <p class="t-text-m"> Identify plants</p>
+      <p class="t-text-m"> Plant care(Watering, Light, Soil, Ventilation)</p>
     </div>
     <div class="body-right body-img float">
-      <img src="solution_sell.png" alt="DIAGRAM" class="image">
+      <img src="solution_profile.png" alt="DIAGRAM" class="image">
     </div>
   </div>
   <!--img 3-->
   <!--img 4-->
   <div class="body-h" id="ytrigger-gh4">
     <div class="body-left body-img float">
-      <img src="solution_socialnetwork.png" alt="DIAGRAM" class="image">
+      <img src="solution_account.png" alt="DIAGRAM" class="image">
     </div>
     <div class="vertical-line-blank">
     </div>
     <div class="body-right body-txt">
-      <P class="t-title-l">Plant Care </P>
+      <P class="t-title-l">User Account </P>
       <p class="horizontal-line"></p>
-      <p class="t-text-m">Multiple views</p>
+      <p class="t-text-m">Recently viewed</p>
+      <p class="t-text-m">Likes</p>
+      <p class="t-text-m">My plants</p>
+
     </div>
   </div>
   <!--img 4-->
@@ -2696,22 +2698,73 @@
       </div>
       <div class="carouselContentGH">
         <div class="slideGH">
-          <img class="width-m" src="mf_1.png" alt="MID-FIDELITY WIREFRAMES">
+          <img class="width-m" src="mf_ld.png" alt="MID-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="width-m" src="mf_2.png" alt="MID-FIDELITY WIREFRAMES">
+          <img class="width-m" src="mf_ld1.png" alt="MID-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="width-m" src="mf_3.png" alt="MID-FIDELITY WIREFRAMES">
+          <img class="width-m" src="mf_ld2.png" alt="MID-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="width-m" src="mf_4.png" alt="MID-FIDELITY WIREFRAMES">
+          <img class="width-m" src="mf_rg1.png" alt="MID-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="width-m" src="mf_0.png" alt="MID-FIDELITY WIREFRAMES">
+          <img class="width-m" src="mf_rg2.png" alt="MID-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="width-m" src="mf_1.png" alt="MID-FIDELITY WIREFRAMES">
+          <img class="width-m" src="mf_rg3.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_rg4.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_rg5.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_login1.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_login2.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_login3.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_home.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_home1.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_home2.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_sell1.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_sell2.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_sell3.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_sell4.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_plantpf1.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_plantpf2.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_plantpf3.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_ua.png" alt="MID-FIDELITY WIREFRAMES">
+        </div>
+        <div class="slideGH">
+          <img class="width-m" src="mf_ua1.png" alt="MID-FIDELITY WIREFRAMES">
         </div>
       </div>
       <div class="nav-gh nav-right-gh">
